--- a/utils/dev-tool/Cargo.toml
+++ b/utils/dev-tool/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 structopt = "0.3.13"
-port_scanner = "0.1.5"
 dotenv = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.83"
+rand = "0.8.4"
