--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -14,10 +14,12 @@ jobs:
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       LOCKBOOK_CI: 1
+      CARGO_TARGET_DIR: /tmp/.lockbook-dev/target/
+      HOME: /tmp/
     steps:
     - uses: actions/checkout@v2
     - name: Check Workspace Fmt
-      run: echo ${{ env.HOME }}
+      run: echo ${{ en }}
     - name: Check Workspace Clippy
       run: cargo run -p lockbook-dev -- check-workspace-clippy
     - name: Build Server
