--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -28,6 +28,8 @@ jobs:
       run: cargo run -p lockbook-dev -- check-android-fmt
     - name: Run Android Lint
       run: cargo run -p lockbook-dev -- check-android-lint
+    - name: Run Kotlin Tests
+      run: cargo run -p lockbook-dev -- run-kotlin-tests
     - name: Run Swift Tests
       run: cargo run -p lockbook-dev -- run-swift-tests
     - name: Cleanup
