able to render latex

--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -101,7 +101,11 @@ dependencies {
     implementation "com.journeyapps:zxing-android-embedded:$qr_embedded_version"
     implementation "com.michael-bull.kotlin-result:kotlin-result:$result_version"
     implementation "androidx.biometric:biometric:$fingerprint_version"
-    implementation "io.noties.markwon:editor:$markdown_version"
+    implementation "io.noties.markwon:core:$markwon_version"
+    implementation "io.noties.markwon:editor:$markwon_version"
+    implementation "io.noties.markwon:ext-strikethrough:$markwon_version"
+    implementation "io.noties.markwon:ext-latex:$markwon_version"
+    implementation "io.noties.markwon:image:$markwon_version"
     implementation "com.jakewharton.timber:timber:$logger_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "com.android.billingclient:billing-ktx:$billing_version"
