--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -24,7 +24,8 @@ buildscript {
         dialog_version = '3.3.0'
         preference_version = '1.2.0'
         refresh_version = '1.1.0'
-        markdown_version = '4.6.2'
+        markwon_version = '4.6.2'
+        syntax_highlighting_version = '2.0.0'
         logger_version = '4.7.1'
         work_version = '2.7.1'
         kotlinter_version = '3.0.2'
