--- a/containers/local.env
+++ b/containers/local.env
@@ -15,6 +15,8 @@ GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN="${GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN
 MINUTES_BETWEEN_METRICS_REFRESH=5
 MILLIS_BETWEEN_METRICS=100
 
+ADMINS="admin"
+
 API_URL=http://localhost:8000
 SERVER_PORT=8000
 MAX_AUTH_DELAY=200000
