--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       LOCKBOOK_CI: 1
+      CARGO_TARGET_DIR: /home/lockbook-ci/.lockbook-dev
     steps:
     - uses: actions/checkout@v2
     - name: Set Rust Version
