--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -35,6 +35,9 @@ jobs:
       run: cargo run -p lockbook-dev -- run-kotlin-tests
     - name: Run Swift Tests
       run: cargo run -p lockbook-dev -- run-swift-tests
+    - name: Server Logs
+      if: always()
+      run: cargo run -p lockbook-dev -- print-server-logs
     - name: Cleanup
       if: always()
       run: cargo run -p lockbook-dev -- kill-server
