--- a/utils/winstaller/Cargo.toml
+++ b/utils/winstaller/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [target.'cfg(windows)'.dependencies]
+eframe = "0.19.0"
+egui_extras = { version = "0.19.0", features = ["image"] }
+image = { version = "0.24", features = ["png"] }
 mslnk = "0.1.8"
