--- a/utils/dev-tool/Cargo.toml
+++ b/utils/dev-tool/Cargo.toml
@@ -9,3 +9,4 @@ dotenv = "0.15.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.83"
 rand = "0.8.4"
+reqwest = { version = "0.11.11", features = ["blocking"], default-features = false }
