--- a/utils/releaser/Cargo.toml
+++ b/utils/releaser/Cargo.toml
@@ -9,5 +9,6 @@ gh_release = "0.1.0"
 toml = "0.5.9"
 sha2 = "0.10.2"
 hex = "0.4.3"
+zip = "0.6.2"
 google-androidpublisher3 = "3.1.0"
 tokio = "1.20.1"
