--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <activity android:name=".screen.MainScreenActivity" />
         <activity android:name=".screen.SettingsActivity" />
         <activity android:name=".screen.LogActivity" />
-        <activity android:name=".screen.SharedFilesActivity" />
+        <activity android:name=".screen.SharesActivity" />
         <activity android:name=".screen.UpgradeAccountActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
