early admin cli things

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
 	"clients/cli",
 	"clients/egui",
 	"clients/linux",
+	"clients/admin",
 	"utils/dev-tool",
 	"utils/releaser",
 	"utils/winstaller",
