--- a/containers/local.env
+++ b/containers/local.env
@@ -1,5 +1,5 @@
 INDEX_DB_LOCATION=/tmp/lbdev
-FILES_PATH=/tmp/lbdev/files
+FILES_PATH=/tmp/lbdev/docs
 
 MILLIS_BETWEEN_PAYMENT_FLOWS=0
 MILLIS_BETWEEN_LOCK_ATTEMPTS=0
@@ -15,7 +15,7 @@ GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN="${GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN
 MINUTES_BETWEEN_METRICS_REFRESH=5
 MILLIS_BETWEEN_METRICS=100
 
-ADMINS="admin1"
+ADMINS="applesauce"
 
 API_URL=http://localhost:8000
 SERVER_PORT=8000
