--- a/containers/local.env
+++ b/containers/local.env
@@ -15,7 +15,7 @@ GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN="${GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN
 MINUTES_BETWEEN_METRICS_REFRESH=5
 MILLIS_BETWEEN_METRICS=100
 
-ADMINS="admin1"
+ADMINS="applesauceman"
 
 API_URL=http://localhost:8000
 SERVER_PORT=8000
