--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,7 @@ bench = false
 default = ["rustls-tls"]
 rustls-tls = ["reqwest/rustls-tls"]
 native-tls = ["reqwest/native-tls"]
+no-network = ["lockbook-server", "tokio"]
 
 [dependencies]
 base64 = "0.13.0"
@@ -22,7 +23,7 @@ bincode = "1.3.3"
 chrono = "0.4.15"
 diffy = "0.2.0"
 fuzzy-matcher = "0.3.7"
-image = "0.24.3" 
+image = "0.24.3"
 jni = { version = "0.13.1", default-features = false }
 rand = "0.8.4"
 raqote = { version = "0.8.0", default-features = false }
@@ -46,6 +47,9 @@ sublime_fuzzy = "0.7.0"
 crossbeam = "0.8.1"
 lockbook-shared = { path = "libs/shared" }
 qrcode-generator = "4.1.6"
+
+lockbook-server = { path = "../server/server", optional = true }
+tokio = { version = "1.5.0", optional = true }
 
 [profile.release]
 debug = true
