--- a/utils/releaser/Cargo.toml
+++ b/utils/releaser/Cargo.toml
@@ -14,3 +14,4 @@ google-androidpublisher3 = "3.1.0"
 tokio = "1.20.1"
 tempfile = { version = "3.1.0" }
 fs_extra = "1.2.0"
+enum-iterator = "1.2.0"
