--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -38,6 +38,8 @@ tracing = "0.1.5"
 tracing-subscriber = "0.3.9"
 tracing-appender = "0.2"
 itertools = "0.10.1"
+reqwest = { version = "0.11", features = ["json"] }
+jwt-simple = "0.11.2"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
