--- a/containers/local.env
+++ b/containers/local.env
@@ -19,6 +19,12 @@ MILLIS_BETWEEN_METRICS=100
 
 ADMINS="admin1"
 
+APPLE_IAP_KEY=""
+APPLE_IAP_KEY_ID=""
+APPLE_ISSUER_ID=""
+APPLE_SUBSCRIPTION_PRODUCT_ID=""
+APP_STORE_CONNECT_SHARED_SECRET=""
+
 API_URL=http://localhost:8000
 SERVER_PORT=8000
 MAX_AUTH_DELAY=200000
