--- a/clients/apple/Shared/Products.plist
+++ b/clients/apple/Shared/Products.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>premium.subscription.monthly</key>
+	<key>subscription.monthly</key>
 	<string></string>
 </dict>
 </plist>
