--- a/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (macOS).xcscheme
+++ b/clients/apple/lockbook.xcodeproj/xcshareddata/xcschemes/Lockbook (macOS).xcscheme
@@ -77,6 +77,9 @@
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
+      <StoreKitConfigurationFileReference
+         identifier = "../Shared/Products.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
