--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -39,7 +39,7 @@ tracing-subscriber = "0.3.9"
 tracing-appender = "0.2"
 itertools = "0.10.1"
 reqwest = { version = "0.11", features = ["json"] }
-jsonwebtoken = "8"
+jsonwebtoken = "*"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
