--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -40,6 +40,7 @@ tracing-appender = "0.2"
 itertools = "0.10.1"
 reqwest = { version = "0.11", features = ["json"] }
 jsonwebtoken = "*"
+x509-parser = { version = "0.14.0", features = ["verify", "validate"]}
 
 [build-dependencies]
 shadow-rs = "0.6.2"
