--- a/containers/local.env
+++ b/containers/local.env
@@ -20,10 +20,10 @@ MILLIS_BETWEEN_METRICS=100
 ADMINS="admin1"
 
 APPLE_SUBSCRIPTION_PRODUCT_ID="basic.premium"
-# APPLE_IAP_KEY=${APPLE_IAP_KEY:=cookies}
-# APPLE_IAP_KEY_ID=${APPLE_IAP_KEY_ID:=apples}
-# APPLE_ISSUER_ID=${APPLE_ISSUER_ID:=notesapp}
-# APP_STORE_CONNECT_SHARED_SECRET=${APP_STORE_CONNECT_SHARED_SECRET:=sharedsecret}
+APPLE_IAP_KEY=${APPLE_IAP_KEY:=1234}
+APPLE_IAP_KEY_ID=${APPLE_IAP_KEY_ID:=1234}
+APPLE_ISSUER_ID=${APPLE_ISSUER_ID:=1234}
+APP_STORE_CONNECT_SHARED_SECRET=${APP_STORE_CONNECT_SHARED_SECRET:=sharedsecret}
 
 API_URL=http://localhost:8000
 SERVER_PORT=8000
