--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -38,6 +38,9 @@ tracing = "0.1.5"
 tracing-subscriber = "0.3.9"
 tracing-appender = "0.2"
 itertools = "0.10.1"
+reqwest = { version = "0.11", features = ["json"] }
+jsonwebtoken = "*"
+x509-parser = { version = "0.14.0", features = ["verify", "validate"]}
 
 [build-dependencies]
 shadow-rs = "0.6.2"
