--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 graphics/** filter=lfs diff=lfs merge=lfs -text
+docs/design-ui/**/*.png filter=lfs diff=lfs merge=lfs -text
+docs/design-ui/**/*.jpg filter=lfs diff=lfs merge=lfs -text
+docs/design-ui/**/*.jpeg filter=lfs diff=lfs merge=lfs -text
