--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".screen.MainScreenActivity" />
         <activity android:name=".screen.SettingsActivity" />
         <activity android:name=".screen.LogActivity" />
+        <activity android:name=".screen.SharesActivity" />
         <activity android:name=".screen.UpgradeAccountActivity" />
         <provider
             android:name="androidx.core.content.FileProvider"
