added a cargo lock up to date check in CI

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -37,6 +37,8 @@ jobs:
     - name: Server Logs
       if: always()
       run: cargo run -p lockbook-dev -- print-server-logs
+    - name: Check Lock File 
+      run: cargo run -p lockbook-dev -- check-lockfile
     - name: Cleanup
       if: always()
       run: cargo run -p lockbook-dev -- kill-server
