--- a/clients/apple/Shared/Config/Development.xcconfig
+++ b/clients/apple/Shared/Config/Development.xcconfig
@@ -1,2 +1,3 @@
 // Local development
-API_LOCATION = http:/$()/localhost:8000
+API_LOCATION = http:/$()/ad7a-2601-8c-4880-5990-51cc-9c89-b021-f12b.ngrok.io
+
