--- a/containers/local.env
+++ b/containers/local.env
@@ -19,6 +19,13 @@ MILLIS_BETWEEN_METRICS=100
 
 ADMINS="admin1"
 
+APPLE_SUB_PROD_ID="basic.premium"
+APPLE_IAP_KEY=${APPLE_IAP_KEY:=1234}
+APPLE_IAP_KEY_ID=${APPLE_IAP_KEY_ID:=1234}
+APPLE_ISSUER_ID=${APPLE_ISSUER_ID:=1234}
+APPLE_ASC_SHARED_SECRET=${APPLE_ASC_SHARED_SECRET:=shared_secret}
+APPLE_ASC_PUB_KEY=${APPLE_ASC_PUB_KEY:public_key}
+
 API_URL=http://localhost:8000
 SERVER_PORT=8000
 MAX_AUTH_DELAY=200000
