--- a/containers/local.env
+++ b/containers/local.env
@@ -25,6 +25,7 @@ APPLE_IAP_KEY_ID=${APPLE_IAP_KEY_ID:=1234}
 APPLE_ISSUER_ID=${APPLE_ISSUER_ID:=1234}
 APPLE_ASC_SHARED_SECRET=${APPLE_ASC_SHARED_SECRET:=shared_secret}
 APPLE_ASC_PUB_KEY=${APPLE_ASC_PUB_KEY:public_key}
+APPLE_MONTHLY_SUB_GROUP_ID=${APPLE_MONTHLY_SUB_GROUP_ID:1234}
 
 API_URL=http://localhost:8000
 SERVER_PORT=8000
