--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -39,7 +39,7 @@ tracing-subscriber = "0.3.9"
 tracing-appender = "0.2"
 itertools = "0.10.1"
 reqwest = { version = "0.11", features = ["json"] }
-jsonwebtoken = "*"
+jsonwebtoken = "8.2.0"
 x509-parser = { version = "0.14.0", features = ["verify", "validate"]}
 
 [build-dependencies]
