--- a/containers/local.env
+++ b/containers/local.env
@@ -18,7 +18,7 @@ MINUTES_BETWEEN_METRICS_REFRESH=5
 MILLIS_BETWEEN_METRICS=100
 
 ADMINS="admin1"
-CORE_VERSIONS="0.5.5, 0.5.6, 0.5.7, 0.5.8"
+CORE_VERSIONS="0.5.9"
 
 APPLE_SUB_PROD_ID="basic.premium"
 APPLE_IAP_KEY_ID=${APPLE_IAP_KEY_ID:=1234}
