--- a/containers/local.env
+++ b/containers/local.env
@@ -17,7 +17,7 @@ GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN="${GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN
 MINUTES_BETWEEN_METRICS_REFRESH=5
 MILLIS_BETWEEN_METRICS=100
 
-ADMINS="admin1"
+ADMINS="admin1, applenew"
 CORE_VERSIONS="0.5.10"
 
 APPLE_SUB_PROD_ID="basic.premium"
