macos: rebuild editor from the ground up (#1482)
Co-authored-by: “Travis <t.vanderstad@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,8 @@ lockbook-server.prod
 lockbook-server
 
 !docs/guides/build
+
+libs/editor/SwiftEditor/Libs/
+libs/editor/egui_editor/include
+
+clients/apple/lockbook.xcworkspace/xcshareddata/swiftpm/Package.resolved
