--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [workspace]
 
+resolver="2"
+
 members = [
 	"libs/core",
 	"libs/core/libs/shared",
 	"libs/core/libs/test_utils",
+	"libs/editor/egui_editor",
 	"server/server",
 	"clients/cli",
 	"clients/egui",
