--- a/clients/apple/exportOptions.plist
+++ b/clients/apple/exportOptions.plist
@@ -2,11 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>teamID</key>
+	<string>39ZS78S25U</string>
 	<key>method</key>
 	<string>app-store</string>
 	<key>uploadBitcode</key>
 	<false/>
 	<key>uploadSymbols</key>
+	<true/>
+	<key>manageAppVersionAndBuildNumber</key>
 	<true/>
 	<key>provisioningProfiles</key>
 	<dict>
