--- a/utils/releaser/Cargo.toml
+++ b/utils/releaser/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 [dependencies]
 structopt = "0.3.13"
 gh_release = "0.1.0"
-toml = "0.5.9"
+toml = "0.7.0"
+toml_edit = "0.19.0"
 sha2 = "0.10.2"
 hex = "0.4.3"
 zip = "0.6.2"
