--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "cli2"
-version = "0.1.0"
+name = "lockbook-cli"
+version = "0.5.10"
 edition = "2021"
+
+[[bin]]
+name = "lockbook"
+path = "src/main.rs"
 
 [dependencies]
 atty = "0.2"
