--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -41,6 +41,8 @@ itertools = "0.10.1"
 reqwest = { version = "0.11", features = ["json"] }
 jsonwebtoken = "8.2.0"
 x509-parser = { version = "0.14.0", features = ["verify", "validate"]}
+db-rs = { path = "../../../../db-rs/db" }
+db-rs-derive = { path = "../../../../db-rs/derive" }
 
 [build-dependencies]
 shadow-rs = "0.6.2"
