--- a/utils/dev/snap-packages/lockbook-desktop/snap/gui/lockbook-desktop.desktop
+++ b/utils/dev/snap-packages/lockbook-desktop/snap/gui/lockbook-desktop.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=Application
-Comment=A secure, private, minimal, cross-platform document editor.
+Comment=The private, polished note-taking platform.
 Terminal=false
 Exec=lockbook-desktop
 Name=Lockbook
