added git hook config to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,6 @@ libs/editor/SwiftEditor/Libs/
 libs/editor/egui_editor/include
 
 clients/apple/lockbook.xcworkspace/xcshareddata/swiftpm/Package.resolved
+
+
+.pre-commit-config.yaml
